--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,7 +112,8 @@
     <!-- The Video length settings in preference -->
     <string name="pref_video_quality_title">Video quality</string>
     <string name="pref_video_quality_default" translatable="false">high</string>
-    <string name="pref_video_quality_entry_high">High (30m)</string>
+    <string name="pref_video_quality_entry_high">High (60m)</string>
+    <string name="pref_video_quality_entry_mid">Middle (60m)</string>
     <string name="pref_video_quality_entry_low">Low (30m)</string>
     <string name="pref_video_quality_entry_mms">MMS (Low, 30s)</string>
     <string name="pref_video_quality_entry_youtube">YouTube (High, 15m)</string>
@@ -157,7 +158,7 @@
 
     <!-- Settings screen, Audio encoder dialog radio button choices -->
     <string name="pref_camera_audioencoder_entry_0">AMRNB</string>
-    <string name="pref_camera_audioencoder_entry_1">QCELP</string>
+    <string name="pref_camera_audioencoder_entry_1">AMRWB</string>
     <string name="pref_camera_audioencoder_entry_2">EVRC</string>
     <string name="pref_camera_audioencoder_entry_3">AAC</string>
 
