--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -488,4 +488,14 @@
      <string name="pref_camera_stableshot_value_2">2</string>
      <string name="pref_camera_stableshot_value_3">4</string>
 
+     <!-- Focusbeep setting title -->
+     <string name="pref_camera_focusbeep_title">Focus Beep</string>
+
+     <!-- Focusbeep default. Do not translate. -->
+     <string name="pref_camera_focusbeep_default">on</string>
+
+     <!-- Focusbeep settings entries -->
+     <string name="pref_camera_focusbeep_entry_off">Off</string>
+     <string name="pref_camera_focusbeep_entry_on">On</string>
+
 </resources>
